--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     {% endblock %}
     
-    {% block_extra_css%}
+    {% block extra_css%}
     {% endblock %}
 
     {% block corejs %}
@@ -42,7 +42,7 @@
     {% endif %}
 
     {% block page_header %}
-    {% end block%}
+    {% endblock %}
 
     {% block content %}
     {% endblock %}
