--- a/templates/base.html
+++ b/templates/base.html
@@ -51,10 +51,11 @@
             </h2>
           </a>
         </div>
+        <!-- Search Bar -->
         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
           <form action="" method="GET">
             <div class="input-group w-100">
-              <input class="form-control btn btn-black border border-black rounded-0" type="text" name="q" placeholder="Search our site">
+              <input class="form-control btn btn-black border border-black rounded-0 bg-white" type="text" name="q" placeholder="Search our site">
               <div class="input-group-append">
                 <button class="form-control btn btn-black border border-black rounded-0" type="submit">
                   <span class="icon">
@@ -65,6 +66,7 @@
             </div>
           </form>
         </div>
+        <!-- My account -->
         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
           <ul class="list-inline list-unstyled text-center text-lg-right my-0">
             <li class="list-inline-item dropdown">
@@ -87,7 +89,7 @@
                 {% endif %}
               </div>
             </li>
-            
+            <!-- Cart -->
             <li class="list-inline-item">
               <a href="" class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link">
                 <div class="text-center">
@@ -103,6 +105,23 @@
               </a>
             </li>
           </ul>
+        </div>
+      </div>
+      <!-- Navbar -->
+      <div class="row bg-white">
+        <nav class="navbar navbar-expand-lg navbar-light w-100">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          {% include 'includes/mobile-top-header.html' %}
+          {% include 'includes/main-nav.html' %}
+        </nav>
+      </div>
+      <div id="delivery-banner" class="row text-center">
+        <div class="col bg-black text-white">
+          <h4 class="logo-font my-1">
+            Free delivery on orders over ${{ free_shipping_threshold }}
+          </h4>
         </div>
       </div>
     </header>
