Final save for evening

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block page_header %}
-  <div class="container">
+  <div class="container header-container">
     <div class="row">
       <div class="col">
 
@@ -12,11 +12,37 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
-  <div class="row">
-    <div class="col">
-
+  <div class="overlay"></div>
+  <div class="container-fluid">
+    <!-- Products Header -->
+    <div class="row">
+      <div class="col text-center mt-3">
+        <h2 class="logo-font">Products</h2>
+        <hr class="w-50 mb-1">
+      </div>
+    </div>
+    <!-- Products -->
+    <div class="row">
+      <div class="product-container col-10 offset-1">
+        <div class="row mt-1 mb-2"></div>
+        <div class="row">
+          {% for product in products %}
+            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+              <div class="card h-100 border-0">
+                {% if product.image %}
+                <a href="">
+                  <img class="card-img--top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                </a>
+                {% else %}
+                <a href="">
+                  <img class="card-img--top img-fluid" src="{{ MEDIA_URL }}" alt="{{ product.name }}">
+                </a>
+                {% endif %}
+              </div>
+            </div>
+          {% endfor %}
+        </div>
+      </div>
     </div>
   </div>
-</div>
 {% endblock %}
