--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -12,7 +12,9 @@
 {% endblock %}
 
 {% block content %}
+  <!-- White background -->
   <div class="overlay"></div>
+  <!-- Products container -->
   <div class="container-fluid">
     <!-- Products Header -->
     <div class="row">
@@ -27,6 +29,7 @@
         <div class="row mt-1 mb-2"></div>
         <div class="row">
           {% for product in products %}
+            <!-- Display depending on screen sizes -->
             <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
               <div class="card h-100 border-0">
                 {% if product.image %}
@@ -38,8 +41,50 @@
                   <img class="card-img--top img-fluid" src="{{ MEDIA_URL }}" alt="{{ product.name }}">
                 </a>
                 {% endif %}
+                <!-- Product name -->
+                <div class="card-body pb-0">
+                  <p class="mb-0">{{ product.name }}</p>
+                </div>
+                <!-- Product Price & Rating-->
+                <div class="card-footer bg-white pt-0 border-0 text-left">
+                  <div class="row">
+                    <div class="col">
+                      <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
+                      <!-- Product rating -->
+                      {% if product.rating %}
+                        <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+                      {% else %}
+                        <small class="text-muted">No rating</small>
+                      {% endif %}
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
+            <!-- Horizontal line on mobile devices -->
+            {% if forloop.counter|divisibleby:1 %}
+            <div class="col-12 d-sm-none mb-5">
+              <hr>
+            </div>
+            {% endif %}
+            <!-- Horizontal line on medium screen sizes -->
+            {% if forloop.counter|divisibleby:2 %}
+              <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
+                <hr>
+              </div>
+            {% endif %}
+            <!-- Horizontal line on large screen sizes -->
+            {% if forloop.counter|divisibleby:3 %}
+              <div class="col-12 d-none d-lg-block d-xl-none mb-5">
+                <hr>
+              </div>
+            {% endif %}
+            <!-- Horizontal line on xl screen sizes -->
+            {% if forloop.counter|divisibleby:4 %}
+              <div class="col-12 d-none d-xl-block mb-5">
+                <hr>
+              </div>
+            {% endif %}
           {% endfor %}
         </div>
       </div>
