--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -36,11 +36,19 @@
         <p class="mb-0">{{ product.name }}</p>
         <!-- Product price -->
         <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
+        <!-- Product category icon -->
+        {% if product.category %}
+        <p class="small mt-1 mb-0">
+          <a class="text-muted" href="{% url 'products' %}?category={{ prooduct.category.name }}">
+            <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
+          </a>
+        </p>
+        {% endif %}
         <!-- Product rating - if any -->
         {% if product.rating %}
-          <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+        <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
         {% else %}
-          <small class="text-muted">No rating</small>
+        <small class="text-muted">No rating</small>
         {% endif %}
         <!-- Product description -->
         <p class="mt-3">{{ product.description }}</p>
