--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -2,92 +2,132 @@
 {% load static %}
 
 {% block page_header %}
-  <div class="container header-container">
-    <div class="row">
-      <div class="col">
+<div class="container header-container">
+  <div class="row">
+    <div class="col">
 
-      </div>
     </div>
   </div>
+</div>
 {% endblock %}
 
 {% block content %}
-  <!-- White background -->
-  <div class="overlay"></div>
-  <!-- Products container -->
-  <div class="container-fluid">
-    <!-- Products Header -->
-    <div class="row">
-      <div class="col text-center mt-3">
-        <h2 class="logo-font">Products</h2>
-        <hr class="w-50 mb-1">
-      </div>
+<!-- White background -->
+<div class="overlay"></div>
+<!-- Products container -->
+<div class="container-fluid">
+  <!-- Products Header -->
+  <div class="row">
+    <div class="col text-center mt-3">
+      <h2 class="logo-font">Products</h2>
+      <!-- Category select buttons -->
+      {% for c in current_categories %}
+      <a class="category-badge text-decoration-none" href="{% url 'products' %}?category={{ c.name }}">
+        <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ c.friendly_name }}</span>
+      </a>
+      {% endfor %}
+      <hr class="w-50 mb-1">
     </div>
-    <!-- Products -->
-    <div class="row">
-      <div class="product-container col-10 offset-1">
-        <div class="row mt-1 mb-2"></div>
-        <div class="row">
-          {% for product in products %}
-            <!-- Display depending on screen sizes -->
-            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-              <div class="card h-100 border-0">
-                {% if product.image %}
-                <a href="{% url 'product_detail' product.id %}">
-                  <img class="card-img--top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
-                </a>
-                {% else %}
-                <a href="{% url 'product_detail' product.id %}">
-                  <img class="card-img--top img-fluid" src="{{ MEDIA_URL }}" alt="{{ product.name }}">
-                </a>
-                {% endif %}
-                <!-- Product name -->
-                <div class="card-body pb-0">
-                  <p class="mb-0">{{ product.name }}</p>
-                </div>
-                <!-- Product Price & Rating-->
-                <div class="card-footer bg-white pt-0 border-0 text-left">
-                  <div class="row">
-                    <div class="col">
-                      <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
-                      <!-- Product rating -->
-                      {% if product.rating %}
-                        <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
-                      {% else %}
-                        <small class="text-muted">No rating</small>
-                      {% endif %}
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- Horizontal line on mobile devices -->
-            {% if forloop.counter|divisibleby:1 %}
-            <div class="col-12 d-sm-none mb-5">
-              <hr>
-            </div>
-            {% endif %}
-            <!-- Horizontal line on medium screen sizes -->
-            {% if forloop.counter|divisibleby:2 %}
-              <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
-                <hr>
-              </div>
-            {% endif %}
-            <!-- Horizontal line on large screen sizes -->
-            {% if forloop.counter|divisibleby:3 %}
-              <div class="col-12 d-none d-lg-block d-xl-none mb-5">
-                <hr>
-              </div>
-            {% endif %}
-            <!-- Horizontal line on xl screen sizes -->
-            {% if forloop.counter|divisibleby:4 %}
-              <div class="col-12 d-none d-xl-block mb-5">
-                <hr>
-              </div>
-            {% endif %}
-          {% endfor %}
+  </div>
+  <!-- Products -->
+  <div class="row">
+    <div class="product-container col-10 offset-1">
+      <div class="row mt-1 mb-2">
+        <!-- Sort by filter -->
+        <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
+          <div class="sort-select-wrapper w-50">
+            <select
+              class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}"
+              id="sort-selector">
+              <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
+              <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)
+              </option>
+              <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price (high to low)
+              </option>
+              <option value="rating_asc" {% if current_sorting == 'rating_asc' %}selected{% endif %}>Rating (low to
+                high)</option>
+              <option value="rating_desc" {% if current_sorting == 'rating_desc' %}selected{% endif %}>Rating (high to
+                low)</option>
+              <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name (A to Z)</option>
+              <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name (Z to A)
+              </option>
+              <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>Category (A to
+                Z)</option>
+              <option value="category_desc" {% if current_sorting == 'category_desc' %}selected{% endif %}>Category (Z
+                to A)</option>
+            </select>
+          </div>
         </div>
+      </div>
+      <div class="row">
+        {% for product in products %}
+        <!-- Display depending on screen sizes -->
+        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+          <div class="card h-100 border-0">
+            {% if product.image %}
+            <a href="{% url 'product_detail' product.id %}">
+              <img class="card-img--top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+            </a>
+            {% else %}
+            <a href="{% url 'product_detail' product.id %}">
+              <img class="card-img--top img-fluid" src="{{ MEDIA_URL }}" alt="{{ product.name }}">
+            </a>
+            {% endif %}
+            <!-- Product name -->
+            <div class="card-body pb-0">
+              <p class="mb-0">{{ product.name }}</p>
+            </div>
+            <!-- Product Price & Rating-->
+            <div class="card-footer bg-white pt-0 border-0 text-left">
+              <div class="row">
+                <div class="col">
+                  <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
+                  <!-- Product category icon -->
+                  {% if product.category %}
+                  <p class="small mt-1 mb-0">
+                    <a class="text-muted" href="{% url 'products' %}?category={{ prooduct.category.name }}">
+                      <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
+                    </a>
+                  </p>
+                  {% endif %}
+                  <!-- Product rating -->
+                  {% if product.rating %}
+                  <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+                  {% else %}
+                  <small class="text-muted">No rating</small>
+                  {% endif %}
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Horizontal line on mobile devices -->
+        {% if forloop.counter|divisibleby:1 %}
+        <div class="col-12 d-sm-none mb-5">
+          <hr>
+        </div>
+        {% endif %}
+        <!-- Horizontal line on medium screen sizes -->
+        {% if forloop.counter|divisibleby:2 %}
+        <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
+          <hr>
+        </div>
+        {% endif %}
+        <!-- Horizontal line on large screen sizes -->
+        {% if forloop.counter|divisibleby:3 %}
+        <div class="col-12 d-none d-lg-block d-xl-none mb-5">
+          <hr>
+        </div>
+        {% endif %}
+        <!-- Horizontal line on xl screen sizes -->
+        {% if forloop.counter|divisibleby:4 %}
+        <div class="col-12 d-none d-xl-block mb-5">
+          <hr>
+        </div>
+        {% endif %}
+        {% endfor %}
       </div>
     </div>
   </div>
+</div>
 {% endblock %}
