--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -32,33 +32,33 @@
   <!-- Products -->
   <div class="row">
     <div class="product-container col-10 offset-1">
-      <div class="row mt-1 mb-2">
-        <!-- Sort by filter -->
-        <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
-          <div class="sort-select-wrapper w-50">
-            <select
-              class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}"
-              id="sort-selector">
-              <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
-              <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)
-              </option>
-              <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price (high to low)
-              </option>
-              <option value="rating_asc" {% if current_sorting == 'rating_asc' %}selected{% endif %}>Rating (low to
-                high)</option>
-              <option value="rating_desc" {% if current_sorting == 'rating_desc' %}selected{% endif %}>Rating (high to
-                low)</option>
-              <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name (A to Z)</option>
-              <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name (Z to A)
-              </option>
-              <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>Category (A to
-                Z)</option>
-              <option value="category_desc" {% if current_sorting == 'category_desc' %}selected{% endif %}>Category (Z
-                to A)</option>
-            </select>
+      <!-- Sort by filter -->
+        <div class="row mt-1 mb-2">
+          <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
+            <div class="sort-select-wrapper w-50">
+              <select id="sort-selector" class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
+                <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
+                <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)</option>
+                <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price (high to low)</option>
+                <option value="rating_asc" {% if current_sorting == 'rating_asc' %}selected{% endif %}>Rating (low to high)</option>
+                <option value="rating_desc" {% if current_sorting == 'rating_desc' %}selected{% endif %}>Rating (high to low)</option>
+                <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name (A to Z)</option>
+                <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name (Z to A)</option>
+                <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>Category (A toZ)</option>
+                <option value="category_desc" {% if current_sorting == 'category_desc' %}selected{% endif %}>Category (Z to A)</option>
+              </select>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 order-md-first">
+            <p class="text-muted mt-3 text-center text-md-left">
+              {% if search_term or current_categories or current_sorting != 'None_None' %}
+                <span class="small"><a href="{% url 'products' %}">Products Home | </a></span>
+              {% endif %}
+              {{ products|length }} Products{% if search_term %} found for <strong>{{ search_term }}</strong>{% endif %}
+            </p>
+
           </div>
         </div>
-      </div>
       <div class="row">
         {% for product in products %}
         <!-- Display depending on screen sizes -->
@@ -85,7 +85,7 @@
                   <!-- Product category icon -->
                   {% if product.category %}
                   <p class="small mt-1 mb-0">
-                    <a class="text-muted" href="{% url 'products' %}?category={{ prooduct.category.name }}">
+                    <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
                       <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
                     </a>
                   </p>
