--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -48,12 +48,41 @@
 
         <!-- Product rating - if any -->
         {% if product.rating %}
-        <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+          <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
         {% else %}
-        <small class="text-muted">No rating</small>
+          <small class="text-muted">No rating</small>
         {% endif %}
         <!-- Product description -->
         <p class="mt-3">{{ product.description }}</p>
+        <!-- Add to shopping cart form -->
+        <form class="form" method="POST" action="{% url 'add_to_bag' product.id %}">
+          {% csrf_token %}
+          <div class="form-row">
+            <!-- Quantity -->
+            <div class="col-12">
+              <p class="mt-3"><strong>Quantity:</strong></p>
+              <div class="form-group w-50">
+                <div class="input-group">
+                  <!-- Quantity input -->
+                  <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id={{ product.id }} id="id_qty_{{ product.id }}">
+                </div>
+              </div>
+            </div>
+            <!-- Keep shopping & Add to bag -->
+            <div class="col-12">
+              <!-- Keep shopping -->
+              <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
+                <span class="icon">
+                  <i class="fas fa-chevron-left"></i>
+                </span>
+                <span class="text-uppercase">Keep Shopping</span>
+              </a>
+              <!-- Add to bag -->
+              <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to bag">
+            </div>
+            <input type="hidden" name="redirect_url" value="{{ request.path }}">
+          </div>
+        </form>
       </div>
     </div>
   </div>
