--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
     <header class="container-fluid fixed-top">
       <div class="row bg-white pt-lg-2 d-none d-lg-flex" id="topnav">
         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
-          <a href="{ url 'home' }" class="nav-link main-logo-link">
+          <a href="{% url 'home' %}" class="nav-link main-logo-link">
             <h2 class="logo-font text-black my-0">
               <strong>Boutique</strong> Ado
             </h2>
@@ -121,7 +121,7 @@
       <div id="delivery-banner" class="row text-center">
         <div class="col bg-black text-white">
           <h4 class="logo-font my-1">
-            Free delivery on orders over ${{ free_shipping_threshold }}
+            Free delivery on orders over ${{ free_delivery_threshold }}
           </h4>
         </div>
       </div>
