--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -58,6 +58,20 @@
         <form class="form" method="POST" action="{% url 'add_to_bag' product.id %}">
           {% csrf_token %}
           <div class="form-row">
+            <!-- Product Size -->
+            {% with product.has_sizes as s %}
+            {% if s %}
+            <div class="col-12">
+              <p><strong>Size:</strong></p>
+              <select class="form-control rounded-0 w-50" name="product_size" id="id_product_size">
+                <option value="xs">XS</option>
+                <option value="s">S</option>
+                <option value="m" selected>M</option>
+                <option value="l">L</option>
+                <option value="xl">XL</option>
+              </select>
+            </div>
+            {% endif %}
             <!-- Quantity -->
             <div class="col-12">
               <p class="mt-3"><strong>Quantity:</strong></p>
@@ -69,7 +83,7 @@
               </div>
             </div>
             <!-- Keep shopping & Add to bag -->
-            <div class="col-12">
+            <div class="col{% if s %}-12 mt-2{% endif %}">
               <!-- Keep shopping -->
               <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
                 <span class="icon">
@@ -81,6 +95,7 @@
               <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to bag">
             </div>
             <input type="hidden" name="redirect_url" value="{{ request.path }}">
+            {% endwith %}
           </div>
         </form>
       </div>
