--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -56,7 +56,32 @@
                   </td>
                   <!-- Item quantity -->
                   <td class="p-3 w-25">
-                    <p class="my-0">{{ item.quantity }}</p>
+                    <form class="form update-form" action="" method="POST">
+                      {% csrf_token %}
+                      <div class="form-group">
+                        <div class="input-group">
+                          <!-- Minus button on quantity -->
+                          <div class="input-group-prepend">
+                            <button class="decrement-qty btn btn-black btn-sm rounded-0" data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
+                              <span><i class="fas fa-minus fa-sm"></i></span>
+                            </button>
+                          </div>
+                            <!-- Quantity input -->
+                            <input class="form-control form-control-sm qty_input" type="number" name="quantity" value="{{ item.quantity }}" min="1" max="99" data-item_id={{ item.item_id }} id="id_qty_{{ item.item_id }}">
+                          <!-- Plus button on quantity -->
+                          <div class="input-group-append">
+                            <button class="increment-qty btn btn-black btn-sm rounded-0" data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
+                              <span><i class="fas fa-plus fa-sm"></i></span>
+                            </button>
+                          </div>
+                          {% if item.product.has_sizes %}
+                          <input type="hidden" name="product_size" id="" value="{{ item.size }}">
+                          {% endif %}
+                        </div>
+                      </div>        
+                    </form>
+                    <a class="update-link text-info" href=""><small>Update</small></a>
+                    <a class="remove-item text-danger float-right" id="remove{{ item.item_id }}" data-size="{{ item.size }}"><small>Remove</small></a>
                   </td>
                   <!-- Subtotal -->
                   <td class="p-3">
@@ -107,4 +132,26 @@
       </div>
     </div>
   </div>
+{% endblock %}
+
+{% block postloadjs %}  
+{{ block.super }}
+{% include 'products/includes/quantity_input_script.html' %}
+
+<script type="text/javascript">
+  // Update quantity on click
+  $('.update-link').click(function(e){
+    var csrfToken = "{{ csrf_token }}";
+    var itemId = $(this).attr('id').split('remove_')[1];
+    var size = $(this).data('size');
+    var url = `/bag/remove/${itemId}`;
+    var data = {'csrfmiddlewaretoken': csrfToken, 'size': size}
+    
+    $.post(url, data)
+     .done(function(){
+       location.reload();
+     });  
+  })
+</script>
+
 {% endblock %}
