--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -77,8 +77,20 @@
               <p class="mt-3"><strong>Quantity:</strong></p>
               <div class="form-group w-50">
                 <div class="input-group">
-                  <!-- Quantity input -->
-                  <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id={{ product.id }} id="id_qty_{{ product.id }}">
+                  <!-- Minus button on quantity -->
+                  <div class="input-group-prepend">
+                    <button class="decrement-qty btn btn-black rounded-0" data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                      <span class="icon"><i class="fas fa-minus"></i></span>
+                    </button>
+                  </div>
+                    <!-- Quantity input -->
+                    <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id={{ product.id }} id="id_qty_{{ product.id }}">
+                  <!-- Plus button on quantity -->
+                  <div class="input-group-append">
+                    <button class="increment-qty btn btn-black rounded-0" data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                      <span class="icon"><i class="fas fa-plus"></i></span>
+                    </button>
+                  </div>
                 </div>
               </div>
             </div>
@@ -102,4 +114,9 @@
     </div>
   </div>
 </div>
+{% endblock %}
+
+{% block postloadjs %}  
+{{ block.super }}
+{% include 'products/includes/quantity_input_script.html' %}
 {% endblock %}
